--- a/Cópia_de_RA1_Individual_Segunda_2024_1_Felyppe.ipynb
+++ b/Cópia_de_RA1_Individual_Segunda_2024_1_Felyppe.ipynb
@@ -60,7 +60,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Aluno:** Felyppe Pardino da Silva"
+        "**Aluno:** Felyppe Pardino da Silva\n",
+        "\n",
+        "Peco perdão por não conseguir colocar cedilha onde é necessário, professor. Os computadores da PUC não possuem cedilha."
       ],
       "metadata": {
         "id": "awcwMNlbrYld"
@@ -121,11 +123,11 @@
         "\n",
         "$$\\lim_{{x \\to 1}} \\frac{\\sqrt{x + 8} - 3}{x^2 - 1}$$\n",
         "\n",
-        "### Substituicao:\n",
+        "### Substituicão:\n",
         "\n",
         "$$\\lim_{{x \\to 1}} \\frac{\\sqrt{1 + 8} - 3}{1^2 - 1} = \\frac{\\sqrt{9} - 3}{1 - 1} = \\frac{0}{0}$$\n",
         "\n",
-        "Resulta em indeterminacao. Teremos que fazer racionalizacao, multiplicando tanto o numerador quanto o denominador pela conjugada do numerador.\n",
+        "Resulta em indeterminacão. Teremos que fazer racionalizacão, multiplicando tanto o numerador quanto o denominador pela conjugada do numerador.\n",
         "\n",
         "$$\\lim_{{x \\to 1}} \\frac{\\sqrt{x + 8} - 3}{x^2 - 1} = \\frac{(\\sqrt{x + 8} - 3)(\\sqrt{x + 8} + 3)}{(x^2 - 1)(\\sqrt{x + 8} + 3)}  $$\n",
         "\n",
@@ -191,11 +193,11 @@
         "\n",
         "$$\\lim_{h \\to 0} \\frac{(2 + h)^3 - 8}{h}$$\n",
         "\n",
-        "### Substituicao direta:\n",
+        "### Substituicão direta:\n",
         "\n",
         "$$\\lim_{h \\to 0} \\frac{(2 + 0)^3 - 8}{0} = \\frac{2^3 - 8}{0} = \\frac{0}{0}$$\n",
         "\n",
-        "Podemos ver que resulta em indeterminacao se aplicarmos diretamente a substituicao. Podemos optar entao por expandir o numerador.\n",
+        "Podemos ver que resulta em indeterminacão se aplicarmos diretamente a substituicão. Podemos optar entao por expandir o numerador.\n",
         "\n",
         "$$\\lim_{h \\to 0}$$"
       ],
